# personal-genetic-analysis-platform

./: .env.example  .env.local-dev  .gitignore  CLAUDE.md  Makefile  README.md  deploy-china.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  mock_worker.py
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_knowledge_base.py  0003_email_verification.py  0004_phone_field.py  0005_oauth_fields.py  0006_system_settings.py  0007_knowledge_file_hash.py
backend/app/: config.py  database.py  main.py
backend/app/api/v1/: auth.py  (+7 more)
backend/app/data/: recommendations.json
backend/app/models/: __init__.py  analysis.py  audit.py  knowledge.py  sample.py  settings.py  user.py
backend/app/schemas/: __init__.py  analysis.py  knowledge.py  sample.py  trend.py  user.py
backend/app/services/: benchmark_service.py  consent_service.py  document_processor.py  email_service.py  embedding_service.py  file_validator.py  knowledge_service.py  llm_service.py  oauth_providers.py  rag_service.py  recommendation_engine.py  report_service.py  sms_service.py  storage_service.py  trend_service.py  verification_service.py
backend/app/utils/: auth.py  encryption.py  pseudonymization.py
backend/app/workers/: celery_client.py
backend/tests/: conftest.py  test_admin_settings.py  test_auth_api.py  test_document_processor_metadata.py  test_encryption.py  test_file_validator.py  test_knowledge_api.py  test_llm_service.py  test_oauth_api.py  test_oauth_providers.py  test_pseudonymization.py  test_rag_service.py  test_recommendation.py  test_verification_service.py
(+87 files in other folders)
