[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genetic-aging-platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Web 框架
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.12",
    # 数据库
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "psycopg2-binary==2.9.10",
    # 校验 / 设置
    "pydantic[email]==2.10.3",
    "pydantic-settings==2.6.1",
    # 认证
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    # 存储
    "minio==7.2.11",
    "aiofiles==24.1.0",
    # 加密
    "cryptography==44.0.0",
    # Celery
    "celery[redis]==5.4.0",
    # 日志
    "structlog==24.4.0",
    # 报告生成
    "reportlab==4.2.5",
    # 工具
    "httpx==0.28.1",
    "pandas==2.2.3",
    "numpy==2.1.3",
    # 邮件 & 短信
    "resend>=2.0.0",
    "alibabacloud-dysmsapi20170525>=3.0.0",
    "alibabacloud-tea-openapi>=0.3.0",
    "redis[hiredis]>=5.0.0",
    # 知识库 — 向量数据库 & 嵌入
    "pgvector>=0.3.0",
    "fastembed>=0.3.6",
    # 知识库 — 文档解析
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
    "ruff==0.8.4",
    "mypy==1.13.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
